--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ header {
 .header-content {
   margin: auto;
   z-index: 2;
+ 
 }
 .divider {
 	height: 6px;
@@ -181,6 +182,7 @@ footer p {
 	h2{
 		font-size: 1.6rem!important;
 	}	
+	
 }
 @media all and (min-width: 801px){
 
@@ -190,6 +192,13 @@ footer p {
 	h2{
 		font-size: 1.8rem!important;
 	}	
+
+
+}
+@media (min-height: 580px){
+		.header-content {
+		padding-top: 100px;
+	}
 }
 
 @media all and (min-width: 1200px){
@@ -198,6 +207,6 @@ footer p {
 	}
 	h2{
 		font-size: 2rem!important;
-	}	
+	
 }
 
